# nlp-toolkit

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
nlp_toolkit/loaders/: universal.py
nlp_toolkit/preproc/: vision.py
notebooks/: document_loaders.ipynb
src/: universal_loader.py
tests/: test_universal_loader.py
