[project]
name = "nlp-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pypdf>=5.9.0",
    "pytesseract>=0.3.13",
]
